Copy code from ECO_PTM_SouthDelta repo.